--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ section {
     align-items: center;
     grid-template-columns: 50% 50%;
     padding: 1rem;
+    justify-items: center;
 }
 
 .product-image {
